--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="./index.html">Home</a>
+    <a href="/index.html">Home</a>
     <h1>Lasagna</h1>
     <img src="./imgs/Penne-Lasagna-Recipe-2.jpg" alt="Lasagna" height="310" width="310">
     <h2>Description</h2>
