--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="./index.html">Home</a>
+    <a href="/index.html">Home</a>
     <h1>Carbonara</h1>
     <img src="./imgs/carbonara-horizontal-master768-v2.jpg" alt="Carbonara" height="310" width="400">
     <h2>Description</h2>
