--- a/recipes/ravioli.html
+++ b/recipes/ravioli.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="/index.html">Home</a>
+    <a href="index.html">Home</a>
     <h1>Lasagna</h1>
     <img src="./imgs/Homemade-ravioli_.jpg" alt="Ravioli" height="310" width="310">
     <h2>Description</h2>
