--- a/recipes/ravioli.html
+++ b/recipes/ravioli.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-    <a href="./index.html">Home</a>
+    <a href="/index.html">Home</a>
     <h1>Lasagna</h1>
-    <img src="./imgs/Homemade-ravioli_.jpg" alt="Ravioli" height="310" width="310">
+    <img src="/imgs/Homemade-ravioli_.jpg" alt="Ravioli" height="310" width="310">
     <h2>Description</h2>
     <p>homemade ravioli is a project. A pasta project. Do not attempt on a Tuesday night after work or soccer practice
         (or both). It takes time. </p>
