--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <img src="./imgs/chef-una-profesion-revista-edu-co-1024x573.jpg" alt="Home image" height="500" width="700">
+    <img src="/imgs/chef-una-profesion-revista-edu-co-1024x573.jpg" alt="Home image" height="500" width="700">
     <h3>Pasta Recipes</h3>
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
