modified to add relative links

--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-    <a href="/index.html">Home</a>
+    <a href="index.html">Home</a>
     <h1>Carbonara</h1>
-    <img src="/imgs/carbonara-horizontal-master768-v2.jpg" alt="Carbonara" height="310" width="400">
+    <img src="imgs/carbonara-horizontal-master768-v2.jpg" alt="Carbonara" height="310" width="400">
     <h2>Description</h2>
     <p>This dish is a deli bacon-egg-and-cheese-on-a-roll that has been pasta-fied, fancified, fetishized and turned
         into an Italian tradition that,
