--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-    <a href="/index.html">Home</a>
+    <a href="index.html">Home</a>
     <h1>Lasagna</h1>
-    <img src="/imgs/Penne-Lasagna-Recipe-2.jpg" alt="Lasagna" height="310" width="310">
+    <img src="imgs/Penne-Lasagna-Recipe-2.jpg" alt="Lasagna" height="310" width="310">
     <h2>Description</h2>
     <p>One of the oldest and best-known <strong>pasta shapes.</strong></p>
     <p>It is usually <strong>rectangular</strong> or <strong>ribbon shaped</strong>, thicker than tagliatelle, made from
